revert server